# FeTrading

./: .gitignore  README.md  package.json  predictPrice.py  pyproject.toml  trading_agent.py
contracts/: MyToken.sol  TradingBot.sol
public/: index.html
src/: App.css  App.js  tradingBot.json
src/programs/my_token/src/: myToken.idl  myToken.rs
src/programs/trading_bot/src/: tradingBot.idl  tradingBot.rs
